Fix font size on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -437,7 +437,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 1.2em;
+    font-size: 1em;
     color: black;
   }
   .welcome-container {
